--- a/weekly-study-life/index.html
+++ b/weekly-study-life/index.html
@@ -3,73 +3,146 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Study This Week</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Weixin Sports</title>
+  <link rel="stylesheet" href="style-steps.css">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Long+Cang&family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Homenaje&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <img src="src/developer-8764523_1920.jpg" alt="profile">
-  </header>
-  <table>
-    <thead>
-      <tr>
-        <td colspan="3">本周学习时长</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Day</td>
-        <td>Front-End-Engineer</td>
-        <td>Library</td>
-      </tr>
-      <tr>
-        <td>Monday</td>
-        <td>7 h 11 min</td>
-        <td>3 h 14 min</td>
-      </tr>
-      <tr>
-        <td>Tuesday</td>
-        <td>3 h 31 min</td>
-        <td>3 h 1 min</td>
-      </tr>
-      <tr>
-        <td>Wendesday</td>
-        <td>5 h 31 min</td>
-        <td>3 h 55 min</td>
-      </tr>
-      <tr>
-        <td>Thursday</td>
-        <td>3 h 55 min</td>
-        <td>2 h 43 min</td>
-      </tr>
-      <tr>
-        <td>Friday</td>
-        <td>4 h 31 min</td>
-        <td>3 h 30 min</td>
-      </tr>
-      <tr>
-        <td>Saturday</td>
-        <td>7 h 48 min</td>
-        <td>7 h 54 min</td>
+  <div class="table-header">Sports Log</div>
+  <div class="table-wrapper">
+    <table class="customer-table">
+        <thead>
+          <tr>
+            <th>Ranking</th>
+            <th>Name</th>
+            <th>Location</th>
+            <th>Date</th>
+            <th>Steps</th>
+          </tr>
+        </thead>
+    
+        <tbody>
+          <tr class="back-light">
+            <td class="rank">1</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/longshun.jpg "alt="Avatar">
+              long shun
+            </td>
+            <td>Xiang Tan</td>
+            <td>2025-3-18</td>
+            <td class="steps">20380</td>
+          </tr>
+  
+          <tr class="back-black">
+            <td class="rank">2</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/tanquan.jpg" alt="Avatar">
+              Tan quan
+            </td>
+            <td>Chang Sha</td>
+            <td>2025-3-18</td>
+            <td class="steps">15733</td>
+          </tr>
+  
+          <tr class="back-light">
+            <td class="rank">3</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/xuqiao.jpg" alt="Avatar">
+              Xu qiao
+            </td>
+            <td>Chang Sha</td>
+            <td>2025-3-18</td>
+            <td class="steps">15185</td>
+          </tr>
+  
+          <tr class="back-black">
+            <td class="rank">4</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/guojiaxin.jpg" alt="Avatar">
+              Guo jiaxin
+            </td>
+            <td>Xiang Tan</td>
+            <td>2025-3-18</td>
+            <td class="steps">13511</td>
+          </tr>
+  
+          <tr class="back-light">
+            <td class="rank">5</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/longwu.jpg" alt="Avatar">
+              Long Wu
+            </td>
+            <td>Chang Sha</td>
+            <td>2025-3-18</td>
+            <td class="steps">12637</td>
+          </tr>
+  
+          <tr class="back-black">
+            <td class="rank">6</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/tanxiangbao.jpg" alt="Avatar">
+              Tan Xiangbao
+            </td>
+            <td>Xiang Tan</td>
+            <td>2025-3-18</td>
+            <td class="steps">12327</td>
+          </tr>
+  
+          <tr class="back-light">
+            <td class="rank">7</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/quanlinyan.jpg" alt="Avatar">
+              Quan Lingyan
+            </td>
+            <td>Xiang Tan</td>
+            <td>2025-3-18</td>
+            <td class="steps">12059</td>
+          </tr>
+          <tr class="back-black">
+            <td class="rank">8</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/Mr.hao.jpg" alt="Avatar">
+              Mr.hao
+            </td>
+            <td>Sheng Zheng</td>
+            <td>2025-3-18</td>
+            <td class="steps">10100</td>
+          </tr>
+          <tr class="back-light">
+            <td class="rank">9</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/penqun.jpg" alt="Avatar">
+              Pen Qun
+            </td>
+            <td>Chang Sha</td>
+            <td>2025-3-18</td>
+            <td class="steps">9600</td>
+          </tr>
+          <tr class="back-black">
+            <td class="rank">10</td>
+            <td class="customer-info">
+              <img class="customer-avatar" src="img-steps/zhouyuhuan.jpg" alt="Avatar">
+              Zhou Yuhuan
+            </td>
+            <td>none</td>
+            <td>2025-3-18</td>
+            <td class="steps">8409</td>
+          </tr>
+  
+        </tbody>
+      </table>
 
-      </tr>
-      <tr></tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="3">天行健，君子以自强不息！</td>
-      </tr>
-    </tfoot>
+  </div>
+    </div>
 
-  </table>
 </body>
 </html>
