Solve the problem of image loading

--- a/WeiXin-Sports-Log/index.html
+++ b/WeiXin-Sports-Log/index.html
@@ -34,7 +34,7 @@
           <tr class="back-light">
             <td class="rank">1</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/longshun.jpg "alt="Avatar">
+              <img class="customer-avatar" src="img-steps/longshun.jpg "alt="Avatar">
               long shun
             </td>
             <td>Xiang Tan</td>
@@ -45,7 +45,7 @@
           <tr class="back-black">
             <td class="rank">2</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/tanquan.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/tanquan.jpg" alt="Avatar">
               Tan quan
             </td>
             <td>Chang Sha</td>
@@ -56,7 +56,7 @@
           <tr class="back-light">
             <td class="rank">3</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/xuqiao.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/xuqiao.jpg" alt="Avatar">
               Xu qiao
             </td>
             <td>Chang Sha</td>
@@ -67,7 +67,7 @@
           <tr class="back-black">
             <td class="rank">4</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/guojiaxin.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/guojiaxin.jpg" alt="Avatar">
               Guo jiaxin
             </td>
             <td>Xiang Tan</td>
@@ -78,7 +78,7 @@
           <tr class="back-light">
             <td class="rank">5</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/longwu.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/longwu.jpg" alt="Avatar">
               Long Wu
             </td>
             <td>Chang Sha</td>
@@ -89,7 +89,7 @@
           <tr class="back-black">
             <td class="rank">6</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/tanxiangbao.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/tanxiangbao.jpg" alt="Avatar">
               Tan Xiangbao
             </td>
             <td>Xiang Tan</td>
@@ -100,7 +100,7 @@
           <tr class="back-light">
             <td class="rank">7</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/quanlinyan.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/quanlinyan.jpg" alt="Avatar">
               Quan Lingyan
             </td>
             <td>Xiang Tan</td>
@@ -110,7 +110,7 @@
           <tr class="back-black">
             <td class="rank">8</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/Mr.hao.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/Mr.hao.jpg" alt="Avatar">
               Mr.hao
             </td>
             <td>Sheng Zheng</td>
@@ -120,7 +120,7 @@
           <tr class="back-light">
             <td class="rank">9</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/penqun.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/penqun.jpg" alt="Avatar">
               Pen Qun
             </td>
             <td>Chang Sha</td>
@@ -130,7 +130,7 @@
           <tr class="back-black">
             <td class="rank">10</td>
             <td class="customer-info">
-              <img class="customer-avatar" src="/table/WeiXin-Sports-Log/img-steps/zhouyuhuan.jpg" alt="Avatar">
+              <img class="customer-avatar" src="img-steps/zhouyuhuan.jpg" alt="Avatar">
               Zhou Yuhuan
             </td>
             <td>none</td>
