--- a/Forest_Deer/index.html
+++ b/Forest_Deer/index.html
@@ -6,35 +6,30 @@
   <title>Deer</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a919cdb0e6.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="navbar">
       <nav class="nav-left"></nav>
       <nav class="nav-right">
         <ul>
           <li>
-            <a href="#" class="nav-a">Home</a>
+            <a href="#" class="link-basic">Home</a>
           </li>
           <li>
-            <a href="#" class="nav-a">About</a>
+            <a href="#" class="link-basic">About</a>
           </li>
           <li>
-            <a href="#" class="nav-a">Services</a>
+            <a href="#" class="link-basic">Services</a>
           </li>
           <li>
-            <a href="#" class="nav-a">Contact</a>
+            <a href="#" class="link-basic">Contact</a>
           </li>
           <li>
-            <button id="button-nav">
-              <a href="#" id="a-nav">Login</a>
-            </button>
+              <a href="#" class="link-outline">Login</a>
           </li>
         </ul>
       </nav>
@@ -42,30 +37,30 @@
   </header>
 
   <main>
-    <div class="register">
+    <form class="form-register">
       <h1>Registration</h1>
-      <div class="input">
+      <div class="input-group">
         <i class="fa-solid fa-user"></i>
         <input type="text" placeholder="Username">
         <hr>
       </div>
-      <div class="input">
+      <div class="input-group">
         <i class="fa-solid fa-envelope"></i>
         <input type="text" placeholder="Email">
         <hr>
       </div>
-      <div class="input">
+      <div class="input-group">
         <i class="fa-solid fa-lock"></i>
         <input type="password" placeholder="Passworld">
         <hr>
       </div>
-      <div class="register-protocol">
+      <div class="form-protocol">
         <input type="checkbox">
         <p>I agree to the terms & conditions</p>
       </div>
-      <button id="button-register">Register</button>
-      <p class="login">Already have an account? <a href="#">Login</a></p>
-    </div>
+      <button class="btn-primary">Register</button>
+      <p>Already have an account? <a href="#">Login</a></p>
+    </form>
   </main>
 </body>
 </html>
